navbar and code sections

--- a/index.html
+++ b/index.html
@@ -1,1 +1,49 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>Technical Document</title>
+  <link rel="stylesheet" href="style.css" />
 
+</head>
+<body>
+    
+<nav id="navbar">
+<header>JavaScript Documentation</header>
+<ul>
+    <li><a class="nav-link" href="#Introduction">Introduction</a></li>
+    <li><a class="nav-link" href="#Hello_World">Hello World</a></li>
+    <li><a class="nav-link" href="#Declaring_variables">Declaring variables</a></li>
+    <li><a class="nav-link" href="#Constants">Constants</a></li>
+    <li><a class="nav-link" href="#Data_types">Data types</a></li>
+    <li><a class="nav-link" href="#References">References</a></li>
+</ul>
+</nav>
+
+<main id="main-doc">
+
+  
+<code>function greeting(yourName) { alert("Hello " + yourName +", how are you?"); } greeting("Peter Parker");</code>
+<code>var x = 42.</code>
+<code>x = 42.</code>
+<code>let y = 13.</code>
+<code>const PI = 3.14;</code>
+<code>const Pete_Object = {"key": "value"}; Pete_Object.key = "otherValue";</code> 
+  
+  
+
+<section class="main-section" id="References">
+<header>References</header>
+<article>
+ <ul>
+  <li>To find out more please go<a href="https://youtu.be/ifx4-DxxAtY" target="_blank">here</a></li>
+ </ul>
+</article>
+</section>
+
+</main>  
+<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+<script  src="js/index.js"></script>
+</body>
+</html>
